--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <!-- Khối 2: Chứa các liên kết -->
             <div class="nav-links">
                 <img src="https://cdn.imgbin.com/7/12/10/imgbin-computer-icons-google-play-android-google-contacts-others-zJmHHYnmD5XvibpsL1SqGGKtP.jpg" alt="Cart Icon" class="cart-icon"><a href="file:///D:/Thi%E1%BA%BFt%20k%E1%BA%BF/btvn6/.html/dangnhap.html">Đăng nhập</a> |
-                <a href="file:///D:/Thi%E1%BA%BFt%20k%E1%BA%BF/btvn6/.html/dangky.html">Đăng ký</a> |
+                <a href="https://github.com/Hu0511/demo/commit/11493280996cb00c261283e9b84f7f718c162ee1#diff-6f59bbf904df0f0daf0ed9cf56bc2d0f2ec475c5adf22796a6845b9ebb4ca5a7">Đăng ký</a> |
                 <img src="https://e7.pngegg.com/pngimages/81/559/png-clipart-shopping-cart-software-computer-icons-shopping-cart-text-retail-thumbnail.png" alt="Cart Icon" class="cart-icon"><a href="#">Giỏ hàng (trống)</a>
             </div>
         </div>
